# digman

./: Cargo.toml  LICENCE  README.md  rustfmt.toml
.github/workflows/: rust.yml
dapplication/: Cargo.toml
dapplication/src/dtos/: ticket_dto.rs
dapplication/src/input_ports/: terminal_input_port.rs
dapplication/src/interactors/: terminal_interactor.rs
dapplication/src/output_ports/: terminal_output_port.rs
ddomain/: Cargo.toml
ddomain/src/: domain_errors.rs
ddomain/src/entites/: ticket.rs
ddomain/src/repositories/: ticket_repository.rs
ddomain/src/value_objects/: app_mode.rs  ticket_level.rs  ticket_status.rs
dinfrastructure/: Cargo.toml
dinfrastructure/src/: lib.rs  ticket_repository_impl.rs
dpresentation/: Cargo.toml
dpresentation/src/: lib.rs  table_colors.rs  views.rs
dpresentation/src/controllers/: terminal_controller.rs
dpresentation/src/presenters/: ratatui_presenter.rs
dpresentation/src/views/: view_amend_guide.rs  view_edit_form.rs  view_footer.rs  view_inquery_guide.rs  view_normal_guide.rs  view_popup.rs  view_raise_guide.rs  view_table.rs  view_ticket_detail.rs  view_ticket_form.rs
src/: main.rs
