[package]
name = "digman"
version = "0.7.1"
edition = "2021"
description = "Ticket management systems for solo players."
authors = ["Yu Tokunaga<tokunaga@grill-ware.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/4hoe8pow/digman"
homepage = "https://grill-ware.com"
documentation = "https://docs.rs/digman"

[workspace]
members = [".", "dapplication", "ddomain", "dinfrastructure", "dpresentation"]
resolver = "2"

[dependencies]
dpresentation = { workspace = true }
ddomain = { workspace = true }
dinfrastructure = { workspace = true }
dapplication = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

[workspace.dependencies]
ddomain = { version = "0.7.1", path = "./ddomain" }
dpresentation = { version = "0.7.1", path = "./dpresentation" }
dinfrastructure = { version = "0.7.1", path = "./dinfrastructure" }
dapplication = { version = "0.7.1", path = "./dapplication" }

chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
color-eyre = "0.6"
tui-textarea = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
