[package]
name = "dinfrastructure"
version = "0.7.0"
edition = "2021"
description = "Ticket management systems for solo players."
authors = ["Yu Tokunaga<tokunaga@grill-ware.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/4hoe8pow/digman"
homepage = "https://grill-ware.com"
documentation = "https://docs.rs/digman"

[dependencies]
ddomain = { workspace = true }
dapplication = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
color-eyre = { workspace = true }
toml = "0.8"